[package]
name = "graphql"
version = "0.1.0"
authors = ["Sebastian Porto <s@porto5.com>"]

[[bin]]
name = "graphql"
path = "src/graphql.rs"

[[bin]]
name = "migrate"
path = "src/migrate.rs"

# [[bin]]
# name = "authorise"
# path = "src/authoriser.rs"

[dependencies]
aws_lambda = { git = "https://github.com/srijs/rust-aws-lambda" }
chrono = "0.4"
chrono-tz = "0.4"
diesel = { version = "1.3", features = ["postgres", "chrono"] }
diesel_migrations = "1.3.0"
failure = "0.1.2"
jsonwebtoken = "4"
juniper = "0.9"
juniper_codegen = "0.9"
libreauth = "0.10.0"
rusoto_core = "0.33"
rusoto_ses = "0.33"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
uuid = { version = "0.6", features = ["v4"] }
validator = "0.7"
validator_derive = "0.7"
