[package]
name = "graphql"
version = "0.1.0"
authors = ["Sebastian Porto <s@porto5.com>"]

[dependencies]
actix = "0.7"
actix-web = "0.7"
askama = "0.7"
bigdecimal = "0.0.11"
chrono = "0.4"
chrono-tz = "0.5"
diesel = { version = "1.3", features = ["postgres", "chrono", "numeric","r2d2"] }
diesel_migrations = "1.3.0"
env_logger = "0.5"
failure = "0.1.2"
futures = "0.1"
jsonwebtoken = "5"
juniper = "0.10"
juniper_codegen = "0.10"
lazy_static = "1.1.0"
libreauth = "0.11.0"
r2d2 = "0.8"
range_check = "0.1.0"
regex = "1.0"
rusoto_core = "0.34"
rusoto_ses = "0.34"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
url = "1.7"
uuid = { version = "0.6", features = ["v4"] }
validator = "0.7"
validator_derive = "0.7"

[build-dependencies]
askama = "0.7"
