[package]
name = "api"
version = "0.1.0"
edition = "2018"
authors = ["Sebastian Porto <s@porto5.com>"]
build = "build.rs"

[dependencies]
askama = "0.7"
bigdecimal = "0.0.14"
chrono = "0.4"
chrono-tz = "0.5"
diesel = { version = "1.4.1", features = ["postgres", "chrono", "numeric", "r2d2"] }
diesel_migrations = "1.4.0"
log = "0.4"
env_logger = "0.6"
failure = "0.1.5"
futures = "0.1"
jsonwebtoken = "5.0"
juniper = "0.11"
juniper_codegen = "0.11"
juniper_rocket = "0.2"
lazy_static = "1.2.0"
libreauth = "0.11.0"
range_check = "0.1.0"
regex = "1.1"
rocket = "0.4"
rocket_cors = "0.4"
rocket_codegen = "0.4"
rusoto_core = "0.36"
rusoto_ses = "0.36"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
url = "1.7"
uuid = { version = "0.7.1", features = ["v4"] }
validator = "0.8"
validator_derive = "0.8"

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["diesel_postgres_pool"]

[build-dependencies]
askama = "0.7.2"
