[package]
name = "graphql"
version = "0.1.0"
authors = ["Sebastian Porto <s@porto5.com>"]

[[bin]]
name = "graphql_app"
path = "src/graphql_app.rs"

[[bin]]
name = "graphql_pub"
path = "src/graphql_pub.rs"

[[bin]]
name = "migrate"
path = "src/migrate.rs"

# [[bin]]
# name = "authorise"
# path = "src/authoriser.rs"

[dependencies]
aws_lambda = { git = "https://github.com/srijs/rust-aws-lambda" }
chrono = "0.4"
chrono-tz = "0.4"
bigdecimal = "0.0.11"
diesel = { version = "1.3", features = ["postgres", "chrono", "numeric"] }
diesel_migrations = "1.3.0"
failure = "0.1.2"
jsonwebtoken = "4"
juniper = "0.9"
juniper_codegen = "0.9"
libreauth = "0.10.0"
rusoto_core = "0.33"
rusoto_sns = "0.33.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
url = "*"
uuid = { version = "0.6", features = ["v4"] }
validator = "0.7"
validator_derive = "0.7"
shared = { path = "../shared" }
