[package]
name = "graphql"
version = "0.1.0"
authors = ["Sebastian Porto <s@porto5.com>"]

[dependencies]
aws_lambda = { git = "https://github.com/srijs/rust-aws-lambda" }
chrono = "0.4"
bigdecimal = "0.0.11"
chrono-tz = "0.5"
diesel = { version = "1.3", features = ["postgres", "chrono", "numeric"] }
diesel_migrations = "1.3.0"
failure = "0.1.2"
jsonwebtoken = "5"
juniper = "0.10"
juniper_codegen = "0.10"
lazy_static = "1.1.0"
libreauth = "0.11.0"
range_check = "0.1.0"
regex = "1.0"
rusoto_core = "0.34"
rusoto_sns = "0.34"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
shared = { path = "../shared" }
url = "1.7"
uuid = { version = "0.6", features = ["v4"] }
validator = "0.7"
validator_derive = "0.7"
