[package]
name = "api"
version = "0.1.0"
edition = "2018"
authors = ["Sebastian Porto <s@porto5.com>"]

[dependencies]
askama = "0.8.0"
bigdecimal = "0.0.14" # Depends on the version that Diesel uses
chrono = "0.4"
chrono-tz = "0.5"
diesel = { version = "1.4.2", features = ["postgres", "chrono", "numeric", "r2d2"] }
diesel_migrations = "1.4.0"
env_logger = "0.6"
failure = "0.1.5"
futures = "0.1"
jsonwebtoken = "6.0"
juniper = "0.12"
juniper_codegen = "0.12"
log = "0.4"
juniper_rocket = "0.3.0"
lazy_static = "1.3.0"
libreauth = "0.11.0"
range_check = "0.1.0"
regex = "1.1"
rocket = "0.4.1"
rocket_codegen = "0.4"
rocket_cors = "0.5.0"
rusoto_core = "0.39.0"
rusoto_sns = "0.39.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
shared = { path = "../shared" }
url = "1.7"
uuid = { version = "0.7.4", features = ["v4"] }
validator = "0.8"
validator_derive = "0.8"

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["diesel_postgres_pool"]

