[package]
name = "mail"
version = "0.1.0"
authors = ["Sebastian Porto <s@porto5.com>"]

[dependencies]
aws_lambda = { git = "https://github.com/srijs/rust-aws-lambda" }
askama = "0.7"
chrono = "*"
failure = "0.1"
rusoto_core = "0.33"
rusoto_ses = "0.33"
serde = "*"
serde_derive = "*"
serde_json = "1.0"

[build-dependencies]
askama = "0.7"
