[package]
name = "graphql"
version = "0.1.0"
authors = ["Sebastian Porto <s@porto5.com>"]

[dependencies]
bcrypt = "0.2"
failure = "0.1.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
aws_lambda = { git = "https://github.com/srijs/rust-aws-lambda" }
juniper = "0.9"
juniper_codegen = "0.9"
frank_jwt = "*"
chrono = "0.4"
chrono-tz = "0.4"
diesel = { version = "1.3", features = ["postgres", "chrono"] }
validator = "0.7"
validator_derive = "0.7"
